Practice Sheet for week 8

--- a/index.html
+++ b/index.html
@@ -5,9 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
-    <title>Document</title>
+    <title>FOUR COLUMNS WEEK 8</title>
 </head>
-<body>
-    
-</body>
+    <body>
+        <header>
+            <nav>
+                <img class="logo" src="img/RIVET.jpg" alt="RIVRT">
+                <ul>
+                    <li><a href="index.html" target="blank">Home</a></li>
+                    <li><a href="about.html" target="blank">About</a></li>
+                    <li><a href="contact.html" target="blank">Contact</a></li>
+                </ul>
+            </nav>
+            <h1>PRACTICE SHEET</h1>
+        </header>
+                <div class="row">
+                     <div class="column"
+                        style="background-color: rgb(189, 228, 17);">
+                            <h2>Column 1</h2>
+                            <p>Northern lights are bright at night. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur purus ut faucibus pulvinar elementum integer enim. Libero id faucibus nisl tincidunt eget nullam non. Molestie nunc non blandit massa enim nec dui nunc mattis. </p>
+                </div>
+                <div class="row">
+                    <div class="column"
+                        style="background-color: pink;">
+                            <h2>Column 2</h2>
+                            <p>Love conquers all! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur purus ut faucibus pulvinar elementum integer enim. Libero id faucibus nisl tincidunt eget nullam non. Molestie nunc non blandit massa enim nec dui nunc mattis. </p>
+                </div>
+                <div class="row">
+                    <div class="column"
+                        style="background-color:blueviolet">
+                             <h2>Column 3</h2> 
+                             <p> Peace is essential! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur purus ut faucibus pulvinar elementum integer enim. Libero id faucibus nisl tincidunt eget nullam non. Molestie nunc non blandit massa enim nec dui nunc mattis. </p>
+                </div>
+                <div class="row">
+                    <div class="column"
+                        style="background-color: orangered">
+                            <h2>Column 4</h2>
+                            <p>I am FOREVER grateful! Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Consectetur purus ut faucibus pulvinar elementum integer enim. Libero id faucibus nisl tincidunt eget nullam non. Molestie nunc non blandit massa enim nec dui nunc mattis. </p>
+    </body>
 </html>
